k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: web_flask_app:1.0
          ports:
            - containerPort: 5000
              protocol: TCP
