k8s/webapp-flask.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-webapp
  labels:
    app: flask
spec:
  containers:
    - name: flask-container
      image: web_flask_app:1.0
      ports:
        - containerPort: 5000
