k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
  namespace: default
spec:
#  type: NodePort
  selector:
    app: flask-app
  ports:
    - port: 5000
      targetPort: 5000
#      nodePort: 32001
      protocol: TCP
